src/main/java/com/example/backend/common/error/code/ExceptionCode.java
package com.example.backend.common.error.code;

public interface ExceptionCode {
  int getStatus();
  String getMessage();
}